Made some test changes to footer

--- a/_columns_1.html
+++ b/_columns_1.html
@@ -1,5 +1,5 @@
 <div class="column content-{{ request.template  | replace: '_', '-' }}">
-
+  test the theme 
   <div class="columns-1-flash">{{ content_for_notifications }}</div>
   
   {% yield %}
