--- a/_columns_2.html
+++ b/_columns_2.html
@@ -1,5 +1,5 @@
 <div class="column content-{{ request.template  | replace: '_', '-' }}">
-
+test this columns 3
   <div class="row">
 
     <div class="col-md-9">
